--- a/TestSkolKompis/MVVM/View/MinProfil.xaml
+++ b/TestSkolKompis/MVVM/View/MinProfil.xaml
@@ -1,13 +1,102 @@
 ﻿<UserControl x:Class="TestSkolKompis.MVVM.View.MinProfil"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TestSkolKompis.MVVM.View"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             Background="Black">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
+             d:DesignHeight="600" d:DesignWidth="800"
+             Background="#272537">
+
     <Grid>
-            
+        <Border CornerRadius="20" Padding="40" Margin="50">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                    <GradientStop Color="#353556" Offset="0"/>
+                    <GradientStop Color="#2B2B45" Offset="1"/>
+                </LinearGradientBrush>
+            </Border.Background>
+
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0">
+
+                <!-- Profilbild med shadow och rundad -->
+                <Border Width="130" Height="130" CornerRadius="65" 
+                        Background="#444" 
+                        HorizontalAlignment="Center"
+                        Margin="0,0,0,10"
+                        >
+                    <Border.Effect>
+                        <DropShadowEffect Color="#000000" BlurRadius="15" ShadowDepth="0" Opacity="0.4"/>
+                    </Border.Effect>
+                    <Image Source="/Images/Alex.png"
+                           Stretch="UniformToFill"
+                           ClipToBounds="True">
+                        <Image.Clip>
+                            <EllipseGeometry RadiusX="65" RadiusY="65" Center="65,65"/>
+                        </Image.Clip>
+                    </Image>
+                </Border>
+
+                <!-- Namn -->
+                <TextBlock Text="Alexander Thorbjörn Nilsson"
+                           FontSize="28"
+                           FontWeight="Bold"
+                           Foreground="White"
+                           HorizontalAlignment="Center"/>
+
+                <!-- Divider -->
+                <Rectangle Fill="#444" Height="2" Width="200" HorizontalAlignment="Center" RadiusX="1" RadiusY="1"/>
+
+                <!-- Ålder -->
+                <TextBlock Text="Ålder: 35"
+                           FontSize="18"
+                           Foreground="#BBBBBB"
+                           HorizontalAlignment="Center"/>
+
+                <!-- Utbildning -->
+                <TextBlock Text="Utbildning: Systemvetare"
+                           FontSize="18"
+                           Foreground="#BBBBBB"
+                           HorizontalAlignment="Center"/>
+
+                <!-- Hobbys -->
+                <TextBlock Text="Hobbys: Programering, Gaming, Fotboll, Promenader, Fotografering"
+                           FontSize="18"
+                           Foreground="#AAAAAA"
+                           HorizontalAlignment="Center"
+                           TextWrapping="Wrap"
+                           TextAlignment="Center"/>
+
+                <Button Content="Redigera Profil" Width="180" Height="40" Margin="0,20,0,0"
+                        Background="#444" Foreground="White" BorderThickness="0" Cursor="Hand">
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Background" Value="#444"/>
+                            <Setter Property="Foreground" Value="White"/>
+                            <Setter Property="BorderThickness" Value="0"/>
+                            <Setter Property="Padding" Value="10,5"/>
+                            <Setter Property="FontSize" Value="16"/>
+                            <Setter Property="FontWeight" Value="SemiBold"/>
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="Button">
+                                        <Border Background="{TemplateBinding Background}" 
+                                                CornerRadius="10">
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+
+                            <!-- Hover effekt -->
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="#555"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
+            </StackPanel>
+        </Border>
     </Grid>
 </UserControl>
