--- a/TestSkolKompis/MVVM/View/HomeView.xaml
+++ b/TestSkolKompis/MVVM/View/HomeView.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
-        <TextBlock Text="Utforska"
+        <TextBlock Text=""
                    Foreground="White"
                    FontSize="28"
                    HorizontalAlignment="Left"
@@ -37,12 +37,12 @@
 
                     <StackPanel Margin="-144,0,0,0">
 
-                        <TextBlock Text=" Slumpa fram &#x0a; din nya Skolkompis"
+                        <TextBlock Text=" Slumpa fram &#x0a; din nya skolkompis"
                                    Foreground="White"
                                    FontSize="25"
                                    Margin="20,10,10,0"/>
 
-                        <TextBlock Text=" Börja idag !! &#x0a;Matcha med andra &#x0a; och gör skolan till roligare miljö"
+                        <TextBlock Text="Matcha med andra &#x0a;och gör skolan till en roligare miljö"
                                    Foreground="White"
                                    FontSize="15"
                                    Margin="20,20,10,0"/>
@@ -85,7 +85,7 @@
                 <Grid>
 
                     <!-- Texten -->
-                    <TextBlock Text="Upptäck personer !! &#x0a;med liknande intressen"
+                    <TextBlock Text="Upptäck personer &#x0a;med liknande intressen"
                    Foreground="Black"
                    FontSize="17"
                    HorizontalAlignment="Left" 
@@ -98,12 +98,12 @@
                Source="/Images/studentSöker.png"
                HorizontalAlignment="Right"
                VerticalAlignment="Bottom"
-               Margin="0,0,-7,-113" RenderTransformOrigin="0.5,0.5">
+               Margin="0,0,-18,-122" RenderTransformOrigin="0.5,0.5">
                         <Image.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform/>
                                 <SkewTransform/>
-                                <RotateTransform Angle="-22.355"/>
+                                <RotateTransform Angle="-14.832"/>
                                 <TranslateTransform/>
                             </TransformGroup>
                         </Image.RenderTransform>
@@ -123,7 +123,7 @@
             </StackPanel.Resources>
 
 
-            <TextBlock Text="Mer om oss"
+            <TextBlock Text="Utforska"
             Foreground="White"
             FontSize="20"
             HorizontalAlignment="Left"
@@ -151,7 +151,7 @@
                        Background="#4B5D82"
                        CornerRadius="10">
 
-                    <TextBlock Text=" Vårt mål är att göra &#x0a; skolan roligare "
+                    <TextBlock Text="Utforska campus på &#x0a;ett nytt sätt"
                               Foreground="White"
                               FontSize="16" Height="57" HorizontalAlignment="Left" 
                            VerticalAlignment="Center"/>
@@ -163,9 +163,9 @@
                       CornerRadius="10">
 
 
-                    <TextBlock Text=" Utvecklat av studenter &#x0a; för studenter"
+                    <TextBlock Text=" Av studenter för &#x0a;studenter"
                               Foreground="White"
-                              FontSize="15" Height="57" HorizontalAlignment="Left" 
+                              FontSize="16" Height="57" HorizontalAlignment="Left" 
                            VerticalAlignment="Center"/>
                 </Border>
 
@@ -174,9 +174,9 @@
                         Background="#667FA3"
                         CornerRadius="10">
 
-                    <TextBlock Text=" En trygg plats &#x0a; för studenter"
+                    <TextBlock Text=" Mer om skolkompis"
                              Foreground="White"
-                             FontSize="16" Height="57" HorizontalAlignment="Left" 
+                             FontSize="16" Height="33" HorizontalAlignment="Left" 
                               VerticalAlignment="Center"/>
 
 
@@ -186,9 +186,6 @@
             </StackPanel>
 
         </StackPanel>
-
-
-
 
     </StackPanel>
 
