--- a/TestSkolKompis/MainWindow.xaml
+++ b/TestSkolKompis/MainWindow.xaml
@@ -33,7 +33,7 @@ xmlns:viewModel="clr-namespace:TestSkolKompis.MVVM.ViewModel"
                 <RowDefinition/>
             </Grid.RowDefinitions>
             
-            <TextBlock Text="SkolKompis"
+            <TextBlock Text="Skolkompis"
              VerticalAlignment="Center"
              HorizontalAlignment="Left"
              Foreground="White"
@@ -41,7 +41,7 @@ xmlns:viewModel="clr-namespace:TestSkolKompis.MVVM.ViewModel"
              Margin="20,0,0,0"/>
 
             <StackPanel Grid.Row="1">
-                <RadioButton Content="Home"
+                <RadioButton Content="Hem"
                              Height="50"
                              Foreground="White"
                              FontSize="14"
